# SDreams

./: BUGS  Changes  INSTALL  Makefile.in  README  README.md  TODO  UTILISATION  acinclude.m4  aclocal.m4  autogen.sh  ccdv.c  config.h.in  configure  configure.ac  exemple.conf  mkinstalldirs  v.sh
CVS/: Entries  Repository
aide/: english.help  francais.help  swedish.help
aide/CVS/: Entries  Repository
database/: country.db
database/CVS/: Entries  Repository
include/: add_info.h  admin_chan.h  admin_cmds.h  admin_manage.h  admin_user.h  aide.h  ban.h  chaninfo.h  chanopt.h  chanserv.h  checksum.h  config.h  crypt.h  cs_cmds.h  cs_register.h  data.h  debug.h  del_info.h  divers.h  dnr.h  fichiers.h  flood.h  hash.h  lang.h  main.h  memoserv.h  moduser.h  msg.h  multicrypt.h  mylog.h  mystring.h  nickserv.h  opdeop.h  outils.h  serveur.h  showcommands.h  socket.h  sql_log.h  stats.h  structs.h  (+12 more)
include/CVS/: Entries  Repository
lang/: english.lang  francais.lang  mailoubli.tmpl  mailregister.tmpl  swedish.lang
lang/CVS/: Entries  Repository
logs/CVS/: Repository  Root
src/: .cvsignore  Makefile.in  add_info.c  admin_chan.c  admin_cmds.c  admin_manage.c  admin_user.c  aide.c  ban.c  chaninfo.c  chanopt.c  chanserv.c  checksum.c  config.c  convertdb.c  cs_cmds.c  cs_register.c  data.c  debug.c  del_info.c  divers.c  dnr.c  fichiers.c  flood.c  hash.c  hash_chan.c  hash_cmd.c  hash_nick.c  hash_user.c  lang.c  main.c  match.c  memoserv.c  mkpasswd.c  moduser.c  multicrypt.c  mylog.c  mystring.c  nickserv.c  opdeop.c  (+17 more)
src/CVS/: Entries  Repository
template/: exemple.mailmemo.tmpl  exemple.mailoubli.tmpl  exemple.mailregister.tmpl
template/CVS/: Entries  Repository
website/: WEB2CS
website/web2cs/: access.php  admin.php  adminstats.php  antiflood.php  antiflood.sql  chanhistorique.php  chaninfo.php  chanopt.php  code_gfx.php  config.inc.php  config.php  createconfigtable.php  dblib.php  delog.php  gene_code.php  get_secu.php  hack.inc.php  index.php  lang.php  libw2c.inc.php  listchan.php  login.php  mesmemos.php  modifaccess.php  moncompte.php  motd.txt  protectkill.htm  recapmoncompte.php  register.php  register2.php  sauvegarde_de_ma_base.sql  setlang.php  updateconfig.php  updatesession.php
website/web2cs/css/: style.css
website/web2cs/img/: code_gfx.php
